[ADD] 인증 로직 테스트 추가